new functional sanity test including sonatype and s3