@@ -2,16 +2,13 @@ name := "sbt-sonatype-release"
 
 organization := "com.gu"
 
-version := "1.0"
+version := "1.0-SNAPSHOT"
 
 sbtPlugin := true
 
-//libraryDependencies ++= Seq(
-//  "com.typesafe.sbt" %% "sbt-pgp" % "0.8.2",
-//  "org.xerial.sbt" %% "sbt-sonatype" % "0.2.1",
-//  "com.typesafe.sbt" %% "sbt-s3" % "0.8",
-//  "com.typesafe.sbt" %% "sbt-git" % "0.6.4"
-//)
+libraryDependencies ++= Seq(
+  "org.scalatest" %% "scalatest" % "2.2.1" % "test"
+)
 
 addSbtPlugin("com.typesafe.sbt" % "sbt-pgp" % "0.8.2")
 
@@ -22,3 +19,11 @@ addSbtPlugin("com.typesafe.sbt" % "sbt-s3" % "0.8")
 //resolvers += "jgit-repo" at "http://download.eclipse.org/jgit/maven"
 
 addSbtPlugin("com.typesafe.sbt" % "sbt-git" % "0.6.4")
+
+ScriptedPlugin.scriptedSettings
+
+scriptedLaunchOpts := { scriptedLaunchOpts.value ++
+  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value, "-Dsbt.log.format=false")
+}
+
+scriptedBufferLog := false
